Sunarqube and fixed code smells