@@ -3,7 +3,6 @@ package com.filip.managementapp.validation;
 import javax.validation.ConstraintValidator;
 import javax.validation.ConstraintValidatorContext;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class IsEnumValueValidator implements ConstraintValidator<IsEnumValue, CharSequence> {
@@ -21,7 +20,7 @@ public class IsEnumValueValidator implements ConstraintValidator<IsEnumValue, Ch
     public void initialize(IsEnumValue constraintAnnotation) {
         acceptedValues = Stream.of(constraintAnnotation.enumClass().getEnumConstants())
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
